JumpScript/tests/baselines/reference/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.errors.txt
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.jump(1,25): error TS6133: 'person' is declared but its value is never read.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.jump(1,41): error TS6133: 'person2' is declared but its value is never read.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.jump(2,9): error TS6133: 'unused' is declared but its value is never read.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.jump(3,14): error TS6133: 'maker' is declared but its value is never read.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.jump(3,20): error TS6133: 'child' is declared but its value is never read.
tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.jump(4,13): error TS6133: 'unused2' is declared but its value is never read.


==== tests/cases/compiler/unusedLocalsOnFunctionDeclarationWithinFunctionExpression1.jump (6 errors) ====
    var greeter = function (person: string, person2: string) {
                            ~~~~~~
!!! error TS6133: 'person' is declared but its value is never read.
                                            ~~~~~~~
!!! error TS6133: 'person2' is declared but its value is never read.
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but its value is never read.
        function maker(child: string): void {
                 ~~~~~
!!! error TS6133: 'maker' is declared but its value is never read.
                       ~~~~~
!!! error TS6133: 'child' is declared but its value is never read.
            var unused2 = 22;
                ~~~~~~~
!!! error TS6133: 'unused2' is declared but its value is never read.
        }
        person2 = "dummy value";
    }